--- a/nefac-website/package.json
+++ b/nefac-website/package.json
@@ -14,8 +14,8 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20.17.17",
-    "@types/react": "^19.0.8",
+    "@types/node": "20.17.17",
+    "@types/react": "19.0.8",
     "@types/react-dom": "^19",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
