--- a/nefac-website/package.json
+++ b/nefac-website/package.json
@@ -5,15 +5,25 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "generate": "faust generatePossibleTypes",
+    "generate:types": "graphql-codegen",
+    "start": "next start",
+    "lint": "next lint",
+    "postinstall": "graphql-codegen"
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
+    "@apollo/client": "^3.13.8",
+    "@faustwp/blocks": "^6.1.2",
+    "@faustwp/cli": "^3.2.3",
+    "@faustwp/core": "^3.2.3",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.2.3",
+    "@wordpress/style-engine": "^2.24.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "graphql": "^16.11.0",
     "lucide-react": "^0.475.0",
     "next": "^15.3.3",
     "react": "^19.1.0",
@@ -25,6 +35,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^5.0.6",
     "@tailwindcss/postcss": "^4.0.6",
     "@types/node": "20.17.17",
     "@types/react": "19.0.8",
@@ -32,6 +43,6 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.2",
     "tailwindcss": "^3.4.17",
-    "typescript": "5.7.3"
+    "typescript": "^5.7.3"
   }
 }
