partial implementation of custom block

--- a/nefac-website/package.json
+++ b/nefac-website/package.json
@@ -19,6 +19,11 @@
     "@faustwp/core": "^3.2.3",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.2.3",
+    "@types/wordpress__block-editor": "^11.5.16",
+    "@types/wordpress__blocks": "^12.5.17",
+    "@wordpress/block-editor": "^14.19.0",
+    "@wordpress/blocks": "^14.13.0",
+    "@wordpress/components": "^29.10.0",
     "@wordpress/style-engine": "^2.24.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -40,6 +45,7 @@
     "@types/node": "20.17.17",
     "@types/react": "19.0.8",
     "@types/react-dom": "^19",
+    "@wordpress/browserslist-config": "^6.24.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.2",
     "tailwindcss": "^3.4.17",
