--- a/nefac-website/package.json
+++ b/nefac-website/package.json
@@ -29,6 +29,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "graphql": "^16.11.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
     "next": "^15.3.3",
     "react": "^19.1.0",
@@ -42,6 +43,7 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.6",
     "@tailwindcss/postcss": "^4.0.6",
+    "@types/lodash": "^4.17.17",
     "@types/node": "20.17.17",
     "@types/react": "19.0.8",
     "@types/react-dom": "^19",
