--- a/nefac-website/package.json
+++ b/nefac-website/package.json
@@ -41,6 +41,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@faustwp/block-editor-utils": "^0.3.3",
     "@graphql-codegen/cli": "^5.0.6",
     "@tailwindcss/postcss": "^4.0.6",
     "@types/lodash": "^4.17.17",
@@ -51,6 +52,7 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.2",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "webpack": "^5.99.9"
   }
 }
