--- a/nefac-website/package.json
+++ b/nefac-website/package.json
@@ -17,6 +17,9 @@
     "@faustwp/blocks": "^6.1.2",
     "@faustwp/cli": "^3.2.3",
     "@faustwp/core": "^3.2.3",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.2.3",
     "@types/wordpress__block-editor": "^11.5.16",
