--- a/nefac-website/package.json
+++ b/nefac-website/package.json
@@ -19,6 +19,7 @@
     "@faustwp/core": "^3.2.3",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.2.3",
     "@wordpress/style-engine": "^2.24.0",
