--- a/nefac-website/package.json
+++ b/nefac-website/package.json
@@ -14,11 +14,15 @@
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
     "@apollo/client": "^3.13.8",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@faustwp/blocks": "^6.1.2",
     "@faustwp/cli": "^3.2.3",
     "@faustwp/core": "^3.2.3",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/icons-material": "^7.1.1",
+    "@mui/material": "^7.1.1",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.2.3",
     "@wordpress/style-engine": "^2.24.0",
@@ -27,6 +31,7 @@
     "embla-carousel-react": "^8.6.0",
     "graphql": "^16.11.0",
     "lucide-react": "^0.475.0",
+    "mdi-material-ui": "^7.9.4",
     "next": "^15.3.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
