--- a/nefac-website/package.json
+++ b/nefac-website/package.json
@@ -19,6 +19,7 @@
     "@faustwp/cli": "^3.2.3",
     "@faustwp/core": "^3.2.3",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@radix-ui/react-accordion": "^1.2.11",
@@ -37,8 +38,8 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
     "next": "^15.3.3",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-icons": "^5.5.0",
     "react-player": "^2.16.0",
     "react-router-dom": "^7.2.0",
